# HPML-dynamic-compression

./: README.md  pyproject.toml  requirements.txt  test.sh  test_baseline.sh
Context-Memory/: README.md  main.py  path_config.py  pyproject.toml  requirements.txt  run.py
Context-Memory/.gitORIGINAL/: config  index  packed-refs
Context-Memory/.gitORIGINAL/logs/: HEAD
Context-Memory/.gitORIGINAL/objects/pack/: pack-3b6a95a65fd017cd53534bdfd5d94e72d834a0c0.idx  pack-3b6a95a65fd017cd53534bdfd5d94e72d834a0c0.pack  pack-3b6a95a65fd017cd53534bdfd5d94e72d834a0c0.rev
Context-Memory/.gitORIGINAL/refs/heads/: main
Context-Memory/src/: arguments.py  callbacks.py  model.py  train.py  trainer_seq2seq.py
Context-Memory/src/arch/: ccm_llama.py  ccm_llama_stream.py  ccm_t5.py  gist_llama.py  gist_t5.py
Context-Memory/src/config/: config.yaml
Context-Memory/src/config/gsm8k/: data.yaml  llama-8b.yaml
Context-Memory/src/config/metaicl/: llama-8b.yaml
Context-Memory/src/data/: load.py  utils.py
Context-Memory/src/data/gsm8k/: __init__.py  collator.py  data.py
Context-Memory/src/peft_custom/: peft_model.py
data/: gsm8k-test-200.json  gsm8k_compressed_train.json  gsm8k_compressed_train_with_comp_after_newline.json  gsm8k_compressed_train_with_comp_at_newline.json  gsm8k_wo_newline.json
outputs/OURS_llama-3.1-8b-instruct-online-concat_recur/: adapter_config.json  run_id.json  special_tokens_map.json  tokenizer_config.json  train_results.json  trainer_state.json
outputs/baseline_insert_COMP_after_newline-llama-3.1-8b-instruct-online-concat_recur/: run_id.json  (+2 more)
scripts/: main.sh
src/: common_utils.py  main.py
(+22 files in other folders)
