[project]
name = "hpml-dynamic-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.2.0",
    "gradio>=6.1.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pip>=25.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.20.7",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "triton>=3.5.0",
    "trl>=0.24.0",
    "unsloth>=2025.11.6",
    "wandb>=0.22.2",
    "math_verify>=0.8.0"
]

[tool.uv.workspace]
members = [
    "Project/HPML-dynamic-compression/context-memory",
]
