[project]
name = "context-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=2.14.0",
    "deepspeed==0.8.3",
    "evaluate==0.3.0",
    "fire==0.5.0",
    "fsspec==2023.9.2",
    "gdown>=5.2.0",
    "huggingface-hub>=0.23.0",
    "hydra-core>=1.3.0",
    "nltk==3.6.2",
    "numpy==1.25.2",
    "omegaconf==2.3.0",
    "peft==0.5.0",
    "pydantic==1.10.7",
    "rouge-score==0.1.2",
    "sentencepiece==0.1.98",
    "setuptools>=80.9.0",
    "torch>=2.1.0",
    "transformers>=4.43.0",
    "wandb>=0.23.1",
]
